# QAGURU_Python_9_21

./: pyproject.toml  settings.py
tests/: conftest.py  test_android.py  test_ios.py
utils/: attach_files.py
